--- a/docs/beliefs.Rmd
+++ b/docs/beliefs.Rmd
@@ -10,7 +10,7 @@ library(knitr)
 opts_chunk$set(echo=FALSE, message=FALSE, warning=FALSE,
                fig.width=4, fig.height=4, dpi=144,
                cache=TRUE)
-read_chunk("beliefs.R")
+read_chunk("R/beliefs.R")
 ```
 ```{r beliefs}
 ```
