Fix miscoded free response questions
Question names were changed to be the following:

cfo3 -> cfo3describe
oss2 -> oss1describe
inter3 -> inter2describe
fp5 -> fp5describe

--- a/docs/free-responses.Rmd
+++ b/docs/free-responses.Rmd
@@ -46,7 +46,7 @@ free_response_question_names <- c(
   "cr1describe", "cr2describe", "cp1describe",
   "repo1describe", "rec1describe",
   "fp1describe", "pipe1describe",
-  "cfo3", "oss2", "inter3", "fp5",
+  "cfo3describe", "oss1describe", "inter2describe", "fp5describe",
   "pa1example",
   "best",
   "design1", "recursive", "metaphor", "history",
