--- a/docs/free-responses.Rmd
+++ b/docs/free-responses.Rmd
@@ -24,6 +24,8 @@ library(magrittr)
 library(programmingquestionnaire)
 data("questions")
 data("questionnaire")
+data("languages")
+data("language_paradigms")
 
 get_question_text <- function(name) {
   filter(questions, question_name == name)$question_text
@@ -57,6 +59,9 @@ free_response_question_names <- c(
   "design1", "recursive", "metaphor", "history",
   "design2", "reusable", "challenges", "nontransfer"
 )
+
+# Languages ----
+known_languages <- unique(language_paradigms$language_name) %>% sort()
 ```
 
 ```{r free-response-questions-table}
@@ -78,7 +83,9 @@ conditionalPanel(
 )
 ```
 
-```{r filter-questions}
+```{r filter-multiple-choice-question}
+# Create checkbox toggle for filtering free responses by
+# responses to a multiple choice question.
 checkboxInput(
   inputId = "filter_on",
   label = "Filter free responses by responses to a multiple choice question",
@@ -113,21 +120,20 @@ conditionalPanel(
   )
 )
 
-
-  conditionalPanel(
-    'input.filter_on == 1 && input.filter_question_name != "none"',
-    renderUI({
-      choices <- levels(questionnaire[[input$filter_question_name]])
-      checkboxGroupInput(
-        inputId = "filter_responses",
-        label = "Filter responses",
-        choices = choices,
-        selected = choices,
-        inline = TRUE,
-        width = "100%"
-      )
-    })
-  )
+conditionalPanel(
+  'input.filter_on == 1 && input.filter_question_name != "none"',
+  renderUI({
+    choices <- levels(questionnaire[[input$filter_question_name]])
+    checkboxGroupInput(
+      inputId = "filter_responses",
+      label = "Filter responses",
+      choices = choices,
+      selected = choices,
+      inline = TRUE,
+      width = "100%"
+    )
+  })
+)
 
 conditionalPanel(
   'input.filter_on == 1 && input.filter_question_name != "none"',
@@ -150,6 +156,25 @@ conditionalPanel(
 )
 ```
 
+```{r filter-language}
+checkboxInput(
+  inputId = "language_filter_on",
+  label = "Filter free responses by people who know a certain language",
+  value = 0
+)
+
+conditionalPanel(
+  'input.language_filter_on == 1',
+  checkboxGroupInput(
+    inputId = "filtered_languages",
+    label = "Filter languages",
+    choices = known_languages,
+    selected = NULL,
+    width = "100%"
+  )
+)
+```
+
 ```{r free-response-question}
 selectInput(
   inputId = "question_name", 
@@ -166,6 +191,18 @@ h4(renderText({
 
 ```{r filtered-free-resonses}
 renderTable({
+  data("questionnaire")
+  
+  if(input$language_filter_on == 1) {
+    data("languages")
+    subjs <- languages %>%
+      filter(language_name %in% input$filtered_languages) %>%
+      .$subj_id %>%
+      unique()
+    
+    questionnaire <- filter(questionnaire, subj_id %in% subjs)
+  }
+  
   if(input$filter_question_name != "none") {
     free_responses <- questionnaire[, c("subj_id", input$filter_question_name, input$question_name)] %>%
       drop_na()
